Migrate tests to junit5